; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-tegra.c_tegra_timer_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-tegra.c_tegra_timer_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timer_of = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@tegra_to = common dso_local global i32 0, align 4
@TIMER_PTV = common dso_local global i64 0, align 8
@TIMER_PCR_INTR_CLR = common dso_local global i32 0, align 4
@TIMER_PCR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @tegra_timer_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tegra_timer_setup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.timer_of*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.timer_of* @per_cpu_ptr(i32* @tegra_to, i32 %4)
  store %struct.timer_of* %5, %struct.timer_of** %3, align 8
  %6 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %7 = call i64 @timer_of_base(%struct.timer_of* %6)
  %8 = load i64, i64* @TIMER_PTV, align 8
  %9 = add nsw i64 %7, %8
  %10 = call i32 @writel_relaxed(i32 0, i64 %9)
  %11 = load i32, i32* @TIMER_PCR_INTR_CLR, align 4
  %12 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %13 = call i64 @timer_of_base(%struct.timer_of* %12)
  %14 = load i64, i64* @TIMER_PCR, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @writel_relaxed(i32 %11, i64 %15)
  %17 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %18 = getelementptr inbounds %struct.timer_of, %struct.timer_of* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @cpumask_of(i32 %21)
  %23 = call i32 @irq_force_affinity(i32 %20, i32 %22)
  %24 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %25 = getelementptr inbounds %struct.timer_of, %struct.timer_of* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @enable_irq(i32 %27)
  %29 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %30 = getelementptr inbounds %struct.timer_of, %struct.timer_of* %29, i32 0, i32 0
  %31 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %32 = call i32 @timer_of_rate(%struct.timer_of* %31)
  %33 = call i32 @clockevents_config_and_register(%struct.TYPE_2__* %30, i32 %32, i32 1, i32 536870912)
  ret i32 0
}

declare dso_local %struct.timer_of* @per_cpu_ptr(i32*, i32) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1

declare dso_local i64 @timer_of_base(%struct.timer_of*) #1

declare dso_local i32 @irq_force_affinity(i32, i32) #1

declare dso_local i32 @cpumask_of(i32) #1

declare dso_local i32 @enable_irq(i32) #1

declare dso_local i32 @clockevents_config_and_register(%struct.TYPE_2__*, i32, i32, i32) #1

declare dso_local i32 @timer_of_rate(%struct.timer_of*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
